# LearnAI_Api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  todo.md
.github/workflows/: cd.yml  ci.yml
app/: dependencies.py  main.py
app/api/: auth_rate_limit.py  dependencies.py
app/core/: config.py  exceptions.py  query.py
app/domain/: aggregates.py
app/infra/: storage.py
app/interfaces/: health.py
docs/: README.md  diseno-arquitecturamvp.docx  guia-consumo-api.md  guia-contribucion-desarrollador.md
migrations/: 001_initial_migration.sql  002_add_tags_to_notebooks.sql  002_clean_initial_migration.sql  003_clean_study_room_messages.sql  003_rag_storage_multitenant.sql  004_security_rls.sql  005_exam_attempt_workflow.sql  006_user_learning_statistics.sql  20260610_initial_migration.sql  20260610_notebooks_tags_many_to_many.sql
scripts/: security_preflight.sql
src/: main.py
tests/: test_ai_usage_quota.py  test_answer_verifier.py  test_api_surface.py  test_auth.py  test_auth_security.py  test_crud.py  test_exam_attempt_workflow.py  test_gemini_client.py  test_health.py  test_http_client.py  test_migration_layout.py  test_notebook_tags.py  test_open_router_client.py  test_owned_resource_workflows.py  test_python_compatibility.py  test_query.py  test_rag_generation_repository.py  test_rag_routes.py  test_rag_usecase.py  test_rls_security.py  test_security_middleware.py  test_sql_migration_safety.py  test_tags.py  test_user_profile.py  test_user_routes.py  test_user_statistics.py  test_user_statistics_repository.py
(+167 files in other folders)
