[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learnia-backend"
version = "0.1.0"
description = "LearnIA backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "supabase",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "bandit>=1.7",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.ruff]
line-length = 100
target-version = "py312"
